fix overlapping canvas

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,12 @@ footer a:hover {
   color: grey;
 }
 
+
+.navbar-nav {
+    margin: 0;
+    padding: 7.5px 15px;
+}
+
 #head {
   witdh: 100%;
   height: 80vh;
